--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
+    "@react-three/postprocessing": "^2.16.3",
+    "@types/react": "^18.3.7",
+    "@types/three": "^0.168.0",
+    "framer-motion": "^11.11.8",
+    "geist": "^1.3.1",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
+    "next": "14.2.11",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-fast-marquee": "^1.6.5",
+    "three": "^0.168.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11"
+    "eslint-config-next": "14.2.11",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
