--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.7",
+    "@react-three/fiber": "^8.17.8",
     "@react-three/postprocessing": "^2.16.3",
+    "@sanity/client": "^6.22.3",
+    "@sanity/image-url": "^1.1.0",
     "@types/react": "^18.3.7",
     "@types/three": "^0.168.0",
     "framer-motion": "^11.11.8",
