--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "next": "14.2.11",
+    "postprocessing": "^6.36.4",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
